# rust-dioxus-ai-tool

./: .cursor_tasks.md  .cursor_tasks_FileTree_component.md  .cursor_tasks_feat_menu_bar.md  .cursor_tasks_smart_file_selection.md  .cursor_tasks_upgrade_to_0.6.md  .gitignore  Cargo.toml  Dioxus.toml  README.md  clippy.toml  fix_bundle_name.sh  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: main.css
docs/: architecture_overview.md
src/: cache.rs  file_tree.html  fs_utils.rs  gitignore_handler.rs  main.rs  settings.rs  tokenizer.rs  workspace_event_handler.rs
src/components/: copy_button.rs  copy_button_test.rs  file_list.rs  file_list_test.rs  file_tree.rs  file_tree.rs.bak  file_tree_test.rs  filter_input.rs  filter_input_test.rs  footer.rs  footer_test.rs  mod.rs  progress_modal.rs  toolbar.rs
