[package]
name = "rust-dioxus-ai-tool"
version = "0.1.0"
authors = ["Etienne Beaudry Auger <etienne@beaudry-auger.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["desktop"] }
dioxus-desktop = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Debug
dioxus-logger = "0.5.1"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
