[package]
name = "rust-dioxus-ai-tool"
version = "0.1.0"
authors = ["Etienne Beaudry Auger <etienne@beaudry-auger.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["desktop"] }
dioxus-desktop = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Debug
dioxus-logger = "0.5.1"
rfd = "0.14"
dirs-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Tokenization
tiktoken-rs = "0.2"
tokenizers = "0.19"
ignore = "0.4"
walkdir = "2"

# New dependencies
bytesize = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
md5 = "0.7.0"
arboard = "3"
blake3 = "1.5"
regex = "1"

[dev-dependencies]
tempfile = "3.10"
dioxus-ssr = "0.5"
pretty_assertions = "1.4"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
